--- a/light-portfolio-details.html
+++ b/light-portfolio-details.html
@@ -107,50 +107,51 @@
 			<div class="row">
 				<div class="col-xs-12 col-sm-8">
 					<div class="portfolio-description single-post">
-						<h3 class="font-26 montserrat weight-medium capitalize">Vive Printing UK</h3>
+						<h3 class="font-26 montserrat weight-medium capitalize">PDF Reader & Scanner</h3>
 						<p>
-							Viveprinting.co.uk, a printing solutions company, required a website redesign to keep pace
-							with customer expectations. Their existing site suffered from an outdated look and feel,
-							cluttered layouts, and findability issues. <br>
+							ur client, an established software company, engaged us to design a next-generation PDF
+							management app providing tools for scanning, editing, converting, signing and annotating
+							PDFs. <br>
 
-							Our UX research revealed opportunities to improve the information architecture and
-							streamline the purchase process. We conducted stakeholder interviews, analyzed site metrics,
-							and reviewed competitor sites to inform the redesign.<br>
+							The goal was creating an intuitive, user-friendly interface optimized for mobile devices. We
+							conducted market analysis and benchmarking to uncover unmet user needs and opportunities to
+							differentiate through UX. <br>
 
-							Next, we created user personas representing target customers. Their goals and behaviors
-							shaped the sitemap, workflows and wireframes we designed. Our aim was crafting intuitive
-							navigation and interactions tailored specifically to customer needs.<br>
+							Our UX research included interviews with target users which informed customer personas and
+							usage scenarios. We translated findings into app architecture and workflow. The sitemap
+							prioritizes critical tasks while minimizing steps for efficiency.<br>
 
-							For the visual experience, we focused on conveying Vive Printing's expertise through
-							dynamic, robust imagery while applying minimalist aesthetics for clean layouts. Compelling
-							and informative content establishes them as thought leaders.
-							<br>
-							The result is a beautifully redesigned website at viveprinting.co.uk that elevates their
-							brand identity through a modern, user-centric experience. Feedback from customer testing
-							validates the highly engaging and usable new design.<br>
+							The UI provides consistent, platform-native controls for familiarity. Clean layouts and
+							visual hierarchy guide users. Illustrations and empty states enhance comprehension. A
+							versatile scanner leverages ML for document capture. The OCR and annotation capabilities
+							deliver productivity.<br>
 
-							The reimagined site architecture, aesthetics, and content strategy re-establishes Vive
-							Printing as an innovative industry leader. Their transformed digital presence effectively
-							showcases their capabilities to prospects across devices. </p>
+							We tailored the interface around key tasks like scanning multi-page documents, eSigning
+							contracts, compressing files, and converting PDFs into other formats. The result is an
+							uncluttered yet powerful design enabling personal and professional document management. <br>
+
+							Through our human-centered design process, we crafted an intuitive, user-focused interface
+							that revolutionizes managing PDFs on mobile. The app received outstanding feedback from user
+							testing for its ease of use and versatility.
 					</div>
 				</div>
 				<div class="col-xs-12 col-sm-4">
 					<div class="portfolio-sidebar pt-45">
 						<ul>
 							<li><span>Client :</span>
-								<p>Vive Printing</p>
+								<p>Tech Partner</p>
 							</li>
 							<li><span>Created By :</span>
 								<p> Muhammad Usman</p>
 							</li>
 							<li><span>Completed :</span>
-								<p>06 Jun 2022</p>
+								<p>10 Mar 2023</p>
 							</li>
 							<li><span>Skill :</span>
 								<p>Figma </p>
 							</li>
 							<li><span>Services :</span>
-								<p>Web Design</p>
+								<p>Mobile Design</p>
 							</li>
 						</ul>
 					</div>
@@ -161,82 +162,82 @@
 					<div class="project-gallery pt-80">
 						<div class="row">
 							<div class="col-xs-12 col-sm-6 mb-30">
-								<a href="assets/img/portfolio/details/1.jpg" class="fancybox">
-									<img src="assets/img/portfolio/details/1.jpg" alt="Project Image" />
+								<a href="assets/img/portfolio/details/pdf01.jpg" class="fancybox">
+									<img src="assets/img/portfolio/details/pdf01.jpg" alt="Project Image" />
 								</a>
 							</div>
 							<div class="col-xs-12 col-sm-6 mb-30">
-								<a href="assets/img/portfolio/details/2.jpg" class="fancybox">
-									<img src="assets/img/portfolio/details/2.jpg" alt="Project Image" />
+								<a href="assets/img/portfolio/details/pdf02.jpg" class="fancybox">
+									<img src="assets/img/portfolio/details/pdf02.jpg" alt="Project Image" />
 								</a>
 							</div>
-
-
-
 							<div class="col-xs-12 col-sm-6 mb-30">
-								<a href="assets/img/portfolio/details/3.jpg" class="fancybox">
-									<img src="assets/img/portfolio/details/3.jpg" alt="Project Image" />
+								<a href="assets/img/portfolio/details/pdf03.jpg" class="fancybox">
+									<img src="assets/img/portfolio/details/pdf03.jpg" alt="Project Image" />
 								</a>
 							</div>
-
 							<div class="col-xs-12 col-sm-6 mb-30">
-								<a href="assets/img/portfolio/details/4.jpg" class="fancybox">
-									<img src="assets/img/portfolio/details/4.jpg" alt="Project Image" />
+								<a href="assets/img/portfolio/details/pdf04.jpg" class="fancybox">
+									<img src="assets/img/portfolio/details/pdf04.jpg" alt="Project Image" />
 								</a>
-
-
 							</div>
+
+
+						</div>
+						<div class="row">
+
 						</div>
 					</div>
 				</div>
 			</div>
 		</div>
-		<!-- Footer Section End -->
-		<!-- Footer Section Start -->
-		<footer class="footer bg-color-1 ptb-20">
-			<div class="container">
-				<div class="row">
-					<div class="col-xs-12">
-						<div class="left floatleft">
-							<p>Copyright &copy; 2023 <a href="" target="_blank"></a>.</p>
-						</div>
-						<div class="right social-link floatright">
-							<ul class="clearfix">
-								<li><a href="mailto:engrshaniii@gmail.com" target="_blank">Email</a></li>
-								<li><a href="https://www.linkedin.com/in/engrshaniii/" target="_blank">Linkden</a></li>
-								<li class="fa fa-whatsapp" aria-hidden="true"><a href="https://wa.me/%2B923143586834"
-										target="_blank">Chat on Whatsapp</a></li>
-							</ul>
-						</div>
+	</div>
+	<!-- Footer Section End -->
+	<!-- Footer Section Start -->
+	<footer class="footer bg-color-1 ptb-20">
+		<div class="container">
+			<div class="row">
+				<div class="col-xs-12">
+					<div class="left floatleft">
+						<p>Copyright &copy; 2023 <a href="" target="_blank"></a>.</p>
+					</div>
+					<div class="right social-link floatright">
+						<ul class="clearfix">
+							<li><a href="mailto:engrshaniii@gmail.com" target="_blank">Email</a></li>
+							<li><a href="https://www.linkedin.com/in/engrshaniii/" target="_blank">Linkden</a></li>
+							<li class="fa fa-whatsapp" aria-hidden="true"><a href="https://wa.me/%2B923143586834"
+									target="_blank">Chat on Whatsapp</a></li>
+						</ul>
 					</div>
 				</div>
 			</div>
-		</footer>
-		<!-- Footer Section End -->
+		</div>
+	</footer>
+	<!-- Footer Section End -->
 
-		<!-- All JS Here -->
-		<!-- jQuery Latest Version -->
-		<script src="assets/js/vendor/jquery-1.12.4.min.js"></script>
-		<!-- Bootstrap JS -->
-		<script src="assets/js/bootstrap.min.js"></script>
-		<!-- One Page Nav JS -->
-		<script src="assets/js/one-page-nav.js"></script>
-		<!-- Waypoints JS -->
-		<script src="assets/js/waypoints.min.js"></script>
-		<!-- Progressbar JS -->
-		<script src="assets/js/progressbar.js"></script>
-		<!-- Isotope -->
-		<script src="assets/js/isotope.pkgd.js"></script>
-		<!-- Isotope -->
-		<script src="assets/js/jquery.validate.min.js"></script>
-		<!-- Slick Slider JS -->
-		<script src="assets/js/slick.min.js"></script>
-		<!-- Fancybox JS -->
-		<script src="assets/js/jquery.fancybox.pack.js"></script>
-		<!-- Plugins JS -->
-		<script src="assets/js/plugins.js"></script>
-		<!-- main JS -->
-		<script src="assets/js/main.js"></script>
+	<!-- All JS Here -->
+	<!-- jQuery Latest Version -->
+	<script src="assets/js/vendor/jquery-1.12.4.min.js"></script>
+	<!-- Bootstrap JS -->
+	<script src="assets/js/bootstrap.min.js"></script>
+	<!-- One Page Nav JS -->
+	<script src="assets/js/one-page-nav.js"></script>
+	<!-- Waypoints JS -->
+	<script src="assets/js/waypoints.min.js"></script>
+	<!-- Progressbar JS -->
+	<script src="assets/js/progressbar.js"></script>
+	<!-- Isotope -->
+	<script src="assets/js/isotope.pkgd.js"></script>
+	<!-- Isotope -->
+	<script src="assets/js/jquery.validate.min.js"></script>
+	<!-- Slick Slider JS -->
+	<script src="assets/js/slick.min.js"></script>
+	<!-- Fancybox JS -->
+	<script src="assets/js/jquery.fancybox.pack.js"></script>
+	<!-- Plugins JS -->
+	<script src="assets/js/plugins.js"></script>
+	<!-- main JS -->
+	<script src="assets/js/main.js"></script>
 </body>
 
 <!-- Mirrored from regaltheme.com/tf/onepage/mim/mim/light-portfolio-details.html by HTTrack Website Copier/3.x [XR&CO'2014], Thu, 01 Dec 2022 15:15:56 GMT -->
