--- a/index.html
+++ b/index.html
@@ -270,8 +270,7 @@
 							<div class="right-text">
 								<i class="zmdi zmdi-check-circle"></i>
 								<h3 class="capitalize font-20">UI/UX Designer</h3>
-								<p>Innovative UI/UX Designer at Omega Tech Solutions dedicated to creating seamless user experiences through research-driven design. Led projects from planning to execution, conducting stakeholder interviews, developing personas and sitemaps,
-									prototyping interactions, and testing usability.</div>
+								<p>Plan and Conduct User Research and Competitor Analysis, Create User Stories, Personas, and Storyboards Create Prototypes.</div>
 						</div>
 						<div class="single-experi">
 							<div class="left-text floatleft">
@@ -283,8 +282,7 @@
 							<div class="right-text">
 								<i class="zmdi zmdi-check-circle"></i>
 								<h3 class="capitalize font-20">UI Designer</h3>
-								<p>Innovative UI Designer at GODesign focused on crafting visually compelling and user-friendly interfaces. Led efforts to
-									design Talent Hunt web portal through wireframing, prototyping, and creating visual assets. </p>
+								<p>Develop Theory In Design and Practice In The World Of Work. And Find Out What Designs Are Often Used. </p>
 							</div>
 						</div>
 					</div>
@@ -300,8 +298,9 @@
 							<div class="right-text">
 								<i class="zmdi zmdi-check-circle"></i>
 								<h3 class="capitalize font-20"> UI UX Designer</h3>
-								<p>Creative and skilled UI/UX Designer at TechPartner specializing in translating brand identity into visually appealing user
-									interfaces. Collaborated closely with UX team on Vive Tech website redesign to harmonize UI with enhanced user flows.</p>
+								<p>Produced A Creative Website Layouting, Created Design, Concept and Sample Layout, Developed Graphic Design and Layout For Product Illustrations
+
+</p>
 							</div>
 						</div>
 						<div class="single-experi">
@@ -312,8 +311,7 @@
 							<div class="right-text">
 								<i class="zmdi zmdi-check-circle"></i>
 								<h3 class="capitalize font-20">UI UX Designer</h3>
-								<p>Skilled UI/UX Designer at Orbiqon committed to enhancing digital products through intuitive yet visually engaging interfaces. Led mobile UI design for All-in-One PDF app focused on usability and simplicity. Developed comprehensive style guide
-									and component library aligned with Orbiqon's brand standards </p>
+								<p>Contributed ideas for brand campaigns Responsible for designed visually compelling digital and print project </p>
 							</div>
 						</div>
 					</div>
