--- a/index.html
+++ b/index.html
@@ -270,7 +270,8 @@
 							<div class="right-text">
 								<i class="zmdi zmdi-check-circle"></i>
 								<h3 class="capitalize font-20">UI/UX Designer</h3>
-								<p>Plan and Conduct User Research and Competitor Analysis, Create User Stories, Personas, and Storyboards Create Prototypes.</div>
+								<p>Innovative UI/UX Designer at Omega Tech Solutions dedicated to creating seamless user experiences through research-driven design. Led projects from planning to execution, conducting stakeholder interviews, developing personas and sitemaps,
+									prototyping interactions, and testing usability.</div>
 						</div>
 						<div class="single-experi">
 							<div class="left-text floatleft">
@@ -282,7 +283,8 @@
 							<div class="right-text">
 								<i class="zmdi zmdi-check-circle"></i>
 								<h3 class="capitalize font-20">UI Designer</h3>
-								<p>Develop Theory In Design and Practice In The World Of Work. And Find Out What Designs Are Often Used. </p>
+								<p>Innovative UI Designer at GODesign focused on crafting visually compelling and user-friendly interfaces. Led efforts to
+									design Talent Hunt web portal through wireframing, prototyping, and creating visual assets. </p>
 							</div>
 						</div>
 					</div>
@@ -298,9 +300,8 @@
 							<div class="right-text">
 								<i class="zmdi zmdi-check-circle"></i>
 								<h3 class="capitalize font-20"> UI UX Designer</h3>
-								<p>Produced A Creative Website Layouting, Created Design, Concept and Sample Layout, Developed Graphic Design and Layout For Product Illustrations
-
-</p>
+								<p>Creative and skilled UI/UX Designer at TechPartner specializing in translating brand identity into visually appealing user
+									interfaces. Collaborated closely with UX team on Vive Tech website redesign to harmonize UI with enhanced user flows.</p>
 							</div>
 						</div>
 						<div class="single-experi">
@@ -311,7 +312,8 @@
 							<div class="right-text">
 								<i class="zmdi zmdi-check-circle"></i>
 								<h3 class="capitalize font-20">UI UX Designer</h3>
-								<p>Contributed ideas for brand campaigns Responsible for designed visually compelling digital and print project </p>
+								<p>Skilled UI/UX Designer at Orbiqon committed to enhancing digital products through intuitive yet visually engaging interfaces. Led mobile UI design for All-in-One PDF app focused on usability and simplicity. Developed comprehensive style guide
+									and component library aligned with Orbiqon's brand standards </p>
 							</div>
 						</div>
 					</div>
@@ -389,7 +391,9 @@
 
 						<div class="grid-item new web gallery work3d percent-33">
 							<div class="single-portfolio overlay light-1 text-center">
-								<img src="assets\img\portfolio\vive.jpg" alt="Mim" />
+								<img src="assets\img\portfolio\v
+								
+								ive.jpg" alt="Mim" />
 								<div class="title plr-40 text-center">
 									<div class="zoom-icon">
 										<a href="Ace Union Onboarding & Signup.html">
