--- a/light-portfolio-details.html
+++ b/light-portfolio-details.html
@@ -128,11 +128,13 @@
 							The result is a beautifully redesigned website at viveprinting.co.uk that elevates their
 							brand identity through a modern, user-centric experience. Feedback from customer testing
 							validates the highly engaging and usable new design.<br>
-							See the final live site   <a  style="color: rgb(243, 208, 9);"href="http://viveprinting.co.uk/" target="_blank">viveprinting.co.uk</a> <br><br>
+							See the final live site   <a  style="color: #CEA752;"href="http://viveprinting.co.uk/" target="_blank">viveprinting.co.uk</a> <br><br>
 
 							The reimagined site architecture, aesthetics, and content strategy re-establishes Vive
 							Printing as an innovative industry leader. Their transformed digital presence effectively
 							showcases their capabilities to prospects across devices. </p>
+							View the Figma Project  <br><a a style="display: inline-block; padding: 10px 15px; background: #CEA752; color: #FFF; border-radius: 4px; text-decoration: none;" href="https://www.figma.com/proto/PCLEm7TSzzLcs9ueFohi4o/Vive-printing.com?page-id=2601%3A2&type=design&node-id=5144-11657&viewport=1913%2C1662%2C0.02&t=Eml9WCapXGOCpI1X-1&scaling=scale-down-width&starting-point-node-id=5144%3A11657&mode=design">View Figma File</a>
+							
 					</div>
 				</div>
 				<div class="col-xs-12 col-sm-4">
