Update Car wash details page.html

--- a/Car wash details page.html
+++ b/Car wash details page.html
@@ -117,6 +117,14 @@ In the searching feature, it will automatically search for
 the suitable car washer for you and it will be allocated 
 to you.You can select your desired time and date which
  best for you. </p>
+							
+ant to peek 👓 behind the scenes of the website design? <br>
+
+						
+
+						<a style="display: inline-block; padding: 10px 15px; background: #2F80ED; color: #FFF; border-radius: 4px; text-decoration: none;"
+							href="https://www.figma.com/file/1VT3FjvjSogjatIwA7WePL/Car-wash-Mobile-app-design?type=design&node-id=1%3A541&mode=design&t=rukjQBTyQGZOjddR-1">Take Me to the Figma
+							File!</a>
 						</div>
 					</div>
 					<div class="col-xs-12 col-sm-4">
