--- a/pdfreader.html
+++ b/pdfreader.html
@@ -133,6 +133,15 @@
 							Through our human-centered design process, we crafted an intuitive, user-focused interface
 							that revolutionizes managing PDFs on mobile. The app received outstanding feedback from user
 							testing for its ease of use and versatility.
+😊 Ideas and designs this way! <br>
+
+						
+
+						<a style="display: inline-block; padding: 10px 15px; background: #6F86FF; color: #FFF; border-radius: 4px; text-decoration: none;"
+							href="https://www.figma.com/file/cJS0ZcDyDSWsXPw3uRa1n8/PDF-Reader-Mobile-app-%232?type=design&node-id=18%3A1595&mode=design&t=aHaLG4UxnkWO664J-1">Take Me to the Figma
+							File!</a>
+
+
 					</div>
 				</div>
 				<div class="col-xs-12 col-sm-4">
