--- a/wmr.html
+++ b/wmr.html
@@ -118,6 +118,13 @@
 							seamlessly share media files with your friends and family. Plus, our direct message feature
 							lets you send messages to your WhatsApp contacts without having to save their phone number.
 							Download WhatsApp Status Saver today and take control of your WhatsApp media files. </p>
+😊 Ideas and designs this way! <br>
+
+						
+
+						<a style="display: inline-block; padding: 10px 15px; background: #2FEA58; color: #FFF; border-radius: 4px; text-decoration: none;"
+							href="https://www.figma.com/file/V7HbIhAZzGrLfFdI4c9kLP/Whatsapp-Recovery-App?type=design&node-id=82%3A2343&mode=design&t=sglrSHBKRJuVTpsi-1"> 👉 View Figma File 
+							File!</a>
 					</div>
 				</div>
 				<div class="col-xs-12 col-sm-4">
