--- a/vpn redesign.html
+++ b/vpn redesign.html
@@ -172,6 +172,13 @@
 
 
 						</p>
+😊 Ideas and designs this way! <br>
+
+						
+
+						<a style="display: inline-block; padding: 10px 15px; background: #2FEA58; color: #FFF; border-radius: 4px; text-decoration: none;"
+							href="https://www.figma.com/file/6V19HEzM0vRCV47wm8p6rL/Red-Vpn?type=design&node-id=0%3A1&mode=design&t=Rd5tFAzIzyYlFVxk-1> 👉 View Figma File 
+							File!</a>
 
 					</div>
 				</div>
