--- a/viveprinting.html
+++ b/viveprinting.html
@@ -36,7 +36,7 @@
       <div class="row header-cover-section">
         <div class="col-md-8 font-bold">
           <p>Web Project</p>
-          <h1 class="h1">Redesigning Mycustompackaging Packaging Design — UI/UX Case Study</h1>
+          <h1 class="h1">Redesigning Viveprinting's Packaging Design — UI/UX Case Study</h1>
         </div>
       </div>
     </div>
@@ -143,7 +143,7 @@
   <!-- image section after header -->
   <section>
     <div class="pl-0 pr-0">
-      <img class="banner-height-width1" src="Assets/Images/mycustompackaging/feature image.png" alt="pago image" />
+      <img class="banner-height-width1" src="Assets/Images/PashaFabrics/viveprinting.co.uk.jpg" alt="pago image" />
     </div>
     <div class="container" style="background-color: white">
       <!-- <div class="row p-top">
@@ -291,7 +291,7 @@
         <div class="col-md-8">
           <p class="p-16 p-1">
 
-            When I first looked at the mycustompackaging website, there were several problems that made it hard for customers
+            When I first looked at the Viveprinting website, there were several problems that made it hard for customers
             to use. The way information was organized did not make sense, so people had trouble finding what they
             wanted.
             Pages also took too long to load, which likely caused some users to leave without finishing what they wanted
@@ -301,7 +301,7 @@
             packaging <br>
           <p style="font-weight: 600;"> Primary Research:</p>
 
-          The primary research for the mycustompackaging project involved a comprehensive analysis of the printing industry
+          The primary research for the Viveprinting project involved a comprehensive analysis of the printing industry
           landscape, focusing on market trends, customer preferences, and competitors' strategies. This included
           gathering data from industry reports, market studies, and competitor analysis tools.<br><br>
 
@@ -314,13 +314,13 @@
           <p style="font-weight: 600;">Sample Questions:</p>
 
           <ul>
-            <li>Can you walk me through your typical experience when navigating mycustompackaging's website</li>
-            <li>Are there any areas of mycustompackaging's website or app where you encounter difficulties or confusion? If
+            <li>Can you walk me through your typical experience when navigating Viveprinting's website</li>
+            <li>Are there any areas of Viveprinting's website or app where you encounter difficulties or confusion? If
               so, could you describe them?</li>
             <li>How important is consistency in design elements (e.g., color scheme, typography, layout) to your overall
-              satisfaction with mycustompackaging's platform?</li>
+              satisfaction with Viveprinting's platform?</li>
             <li>What factors do you consider when selecting a printing service provider?</li>
-            <li>Are there any specific features or services you would like to see improved or added by mycustompackaging?
+            <li>Are there any specific features or services you would like to see improved or added by Viveprinting?
             </li>
 
 
@@ -348,7 +348,7 @@
             functionality with aesthetic appeal, ensuring an intuitive and delightful user experience. <br>
           <p style="font-weight: 600;"> Typography:</p>
 
-          We carefully selected two primary fonts, DM Sans and Poppins, to establish a harmonious typographic
+          We carefully selected two primary fonts, Montserrat and Poppins, to establish a harmonious typographic
           hierarchy across the website. Montserrat exudes a sense of modernity and sophistication, while Poppins offers
           excellent readability and versatility. Through strategic use of font weights and styles, we maintain
           consistency and visual coherence across all textual elements.
@@ -377,8 +377,8 @@
           </p>
         </div>
         <div class="container-fluid margin-top pl-0 pr-0">
-          <img class="banner-height-width1" src="Assets/Images/mycustompackaging/2nd.jpg" alt="pago image" />
-        <!-- </div>
+          <img class="banner-height-width1" src="Assets/Images/PashaFabrics/artboard.png" alt="pago image" />
+        </div>
         <div class="row p-top">
           <div class="col-md-4">
             <h4 class="h4 max-w">
@@ -388,15 +388,15 @@
           <div class="col-md-8">
             <p class="p-16 p-1">
 
-               During the development phase of the mycustompackaging website accessible at  <a href="https://viveprinting.co.uk/" style="color: #CEA752;">viveprinting.co.uk </a>, our 
-             Our team meticulously implemented various technologies and coding languages to ensure optimal performance and
+              During the development phase of the Vive Printing website accessible at  <a href="https://viveprinting.co.uk/" style="color: #CEA752;">viveprinting.co.uk </a>, our
+              team meticulously implemented various technologies and coding languages to ensure optimal performance and
               functionality. Leveraging WordPress as the foundational platform, we employed a combination of HTML, CSS,
               JavaScript, and PHP to bring the website to life.
 
               One of the key focuses during development was maintaining pixel-perfect precision and adhering to the
               design specifications outlined in our collaborative efforts with the UX/UI designers. Through close
               collaboration with the development team, we ensured seamless integration of the design elements, including
-              typography, color schemes and the overall style.
+              typography, color schemes (utilizing #CEA752 as the primary color), and the overall style.
 
               Furthermore, our development process prioritized user experience and search engine optimization (SEO)
               considerations. We held regular meetings with both the SEO team and the development team to align on best
@@ -404,12 +404,12 @@
 
             </p>
           </div>
-        </div> -->
+        </div>
   </section>
-  <!-- <div class="container-fluid margin-top pl-0 pr-0">
+  <div class="container-fluid margin-top pl-0 pr-0">
     <img class="banner-height-width1" src="Assets/Images/PashaFabrics/PASHA_1.jpg" alt="pago image" />
     
-  </div> -->
+  </div>
   
   </div>
   <!-- research section ends here -->
@@ -497,101 +497,102 @@
 
 </section>-->
   <div class="container mt-230">
-    <div class="row" align="center">
+    <div class="row" >
       <div class="col-md-12">
         <h3 class="h3" style="padding: 20px">More Projects</h3>
       </div>
     </div>
     <div class="row">
-     <!-- Carousel Card -->
-     <div class="card card-raised card-carousel">
-      <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel" data-interval="3000">
-        <ol class="carousel-indicators">
-          <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
-          <li data-target="#carouselExampleIndicators" data-slide-to="1" class=""></li>
-          <li data-target="#carouselExampleIndicators" data-slide-to="2" class=""></li>
-          <li data-target="#carouselExampleIndicators" data-slide-to="3" class=""></li>
-          <li data-target="#carouselExampleIndicators" data-slide-to="4" class=""></li>
-        </ol>
-        <div class="carousel-inner">
-          <div class="carousel-item active">
-            <img class="d-block w-100" src="Assets/Images/carwash/Feature Image.jpg" alt="First slide" />
-            <div class="carousel-caption d-none d-md-block" style="
-                  background: rgba(0, 0, 0, 0.5);
-                  padding: 40px;
-                  margin-bottom: -20px;
-                ">
-              <h4 style="text-align: text; margin-bottom: 25px">
-                Car Wash Mobile App
-              </h4>
+      <div class="col-md-12 mr-auto ml-auto">
+       <!-- Carousel Card -->
+       <div class="card card-raised card-carousel">
+        <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel" data-interval="3000">
+          <ol class="carousel-indicators">
+            <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+            <li data-target="#carouselExampleIndicators" data-slide-to="1" class=""></li>
+            <li data-target="#carouselExampleIndicators" data-slide-to="2" class=""></li>
+            <li data-target="#carouselExampleIndicators" data-slide-to="3" class=""></li>
+            <li data-target="#carouselExampleIndicators" data-slide-to="4" class=""></li>
+          </ol>
+          <div class="carousel-inner">
+            <div class="carousel-item active">
+              <img class="d-block w-100" src="Assets/Images/carwash/Feature Image.jpg" alt="First slide" />
+              <div class="carousel-caption d-none d-md-block" style="
+                    background: rgba(0, 0, 0, 0.5);
+                    padding: 40px;
+                    margin-bottom: -20px;
+                  ">
+                <h4 style="text-align: text; margin-bottom: 25px">
+                  Car Wash Mobile App
+                </h4>
+              </div>
+            </div>
+            <div class="carousel-item">
+              <img class="d-block w-100" src="Assets/Images/PashaFabrics/viveprinting.co.uk.jpg" alt="Second slide" />
+              <div class="carousel-caption d-none d-md-block" style="
+                    background: rgba(0, 0, 0, 0.5);
+                    padding: 40px;
+                    margin-bottom: -20px;
+                  ">
+                <h4 style="text-align: text; margin-bottom: 25px">
+                  Redesign E e-commerce Web Design
+                </h4>
+              </div>
+            </div>
+            <div class="carousel-item">
+              <img class="d-block w-100" src="Assets/Images/shrtsurl/feature image.jpg" alt="Third slide" />
+              <div class="carousel-caption d-none d-md-block" style="
+                    background: rgba(0, 0, 0, 0.5);
+                    padding: 40px;
+                    margin-bottom: -20px;
+                  ">
+                <h4 style="text-align: text; margin-bottom: 25px">
+                  Dashboard Redesign Web Proeject
+                </h4>
+              </div>
+            </div>
+            <div class="carousel-item">
+              <img class="d-block w-100" src="Assets/Images/PashaFabrics/viveprinting.co.uk.jpg" alt="Third slide" />
+              <div class="carousel-caption d-none d-md-block" style="
+                    background: rgba(0, 0, 0, 0.5);
+                    padding: 40px;
+                    margin-bottom: -20px;
+                  ">
+                <h4 style="text-align: text; margin-bottom: 25px">
+                  Redesigning Viveprinting's Packaging Design — UI/UX Case Study
+                </h4>
+              </div>
+            </div>
+            <div class="carousel-item">
+              <img class="d-block w-100" src="Assets/Images/Pdf scanner/1st-.jpg" alt="Third slide" />
+              <div class="carousel-caption d-none d-md-block" style="
+                    background: rgba(0, 0, 0, 0.5);
+                    padding: 40px;
+                    margin-bottom: -20px;
+                  ">
+                <h4 style="text-align: text; margin-bottom: 25px">
+                  Pdf Suit App Desing
+                </h4>
+              </div>
             </div>
           </div>
-          <div class="carousel-item">
-            <img class="d-block w-100" src="Assets/Images/PashaFabrics/viveprinting.co.uk.jpg" alt="Second slide" />
-            <div class="carousel-caption d-none d-md-block" style="
-                  background: rgba(0, 0, 0, 0.5);
-                  padding: 40px;
-                  margin-bottom: -20px;
-                ">
-              <h4 style="text-align: text; margin-bottom: 25px">
-                Redesign E e-commerce Web Design
-              </h4>
-            </div>
-          </div>
-          <div class="carousel-item">
-            <img class="d-block w-100" src="Assets/Images/shrtsurl/feature image.jpg" alt="Third slide" />
-            <div class="carousel-caption d-none d-md-block" style="
-                  background: rgba(0, 0, 0, 0.5);
-                  padding: 40px;
-                  margin-bottom: -20px;
-                ">
-              <h4 style="text-align: text; margin-bottom: 25px">
-                Dashboard Redesign Web Proeject
-              </h4>
-            </div>
-          </div>
-          <div class="carousel-item">
-            <img class="d-block w-100" src="Assets/Images/PashaFabrics/viveprinting.co.uk.jpg" alt="Third slide" />
-            <div class="carousel-caption d-none d-md-block" style="
-                  background: rgba(0, 0, 0, 0.5);
-                  padding: 40px;
-                  margin-bottom: -20px;
-                ">
-              <h4 style="text-align: text; margin-bottom: 25px">
-                Redesigning Viveprinting's Packaging Design — UI/UX Case Study
-              </h4>
-            </div>
-          </div>
-          <div class="carousel-item">
-            <img class="d-block w-100" src="Assets/Images/Pdf scanner/1st-.jpg" alt="Third slide" />
-            <div class="carousel-caption d-none d-md-block" style="
-                  background: rgba(0, 0, 0, 0.5);
-                  padding: 40px;
-                  margin-bottom: -20px;
-                ">
-              <h4 style="text-align: text; margin-bottom: 25px">
-                Pdf Suit App Desing
-              </h4>
-            </div>
-          </div>
+          <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="sr-only">Previous</span>
+          </a>
+          <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="sr-only">Next</span>
+          </a>
         </div>
-        <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
-          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-          <span class="sr-only">Previous</span>
-        </a>
-        <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
-          <span class="carousel-control-next-icon" aria-hidden="true"></span>
-          <span class="sr-only">Next</span>
-        </a>
       </div>
-    </div>
-    <!-- End Carousel Card -->
+      <!-- End Carousel Card -->
       </div>
     </div>
   </div>
   <!-- Analysis section end here -->
 
-  <!--footer section start-->
+ <!--footer section start-->
   <!--<script-->
   <!--  language="javascript"-->
   <!--  type="text/javascript"-->
