--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
             focuses on users and flexible problem solving, while System Thinking considers the broad impact of top to
             bottom solutions. This mixture generates value and creativity, addressing complexity and dynamic changes.
           </p>
-          <a class="color-black" href="all-project.html">
+          <a class="color-black" href="#">
             <div class="projects-button">
               <p>
                 See All Projects
