--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
     <div class="container mp-25">
       <div class="row services">
         <div class="col-md-3 padding-t">
-          <a href="branding.html">
+          <a href="#">
             <div class="inline-for-mob menu-headings-row">
               <p class="services-numbering">01.</p>
               <h6 class="h6">Branding & Strategy</h6>
@@ -217,7 +217,7 @@
           </a>
         </div>
         <div class="col-md-3 padding-t">
-          <a href="digital-design.html">
+          <a href="#">
             <div class="inline-for-mob menu-headings-row">
               <p class="services-numbering">02.</p>
               <h6 class="h6">UI Design</h6>
@@ -230,7 +230,7 @@
           </a>
         </div>
         <div class="col-md-3 padding-t">
-          <a href="mobile-development.html">
+          <a href="#">
             <div class="inline-for-mob menu-headings-row">
               <p class="services-numbering">03.</p>
               <h6 class="h6">UX Design</h6>
@@ -243,7 +243,7 @@
           </a>
         </div>
         <div class="col-md-3 padding-t">
-          <a href="branding.html">
+          <a href="#">
             <div class="inline-for-mob menu-headings-row">
               <p class="services-numbering">04.</p>
               <h6 class="h6">UX Researcher</h6>
