--- a/index.html
+++ b/index.html
@@ -1002,7 +1002,7 @@
         </a>
         <div class="color-orange">
           <small class="slider-text-numbering">01.</small>
-          <h2 style="padding: 20px 0px 64px 16px; font-size: 40px;" class="mega-heading">Pasha Fabrics</h2>
+          <h2 style="padding: 20px 0px 64px 16px; font-size: 40px;" class="mega-heading">Viveprinting</h2>
         </div>
       </div>
       <div class="col-md-4 coll-sm-3">
@@ -1012,12 +1012,12 @@
         </a>
         <div class="color-orange">
           <small class="slider-text-numbering">02.</small>
-          <h2 style="padding: 20px 0px 64px 16px; font-size: 40px;" class="mega-heading">Carrmate</h2>
+          <h2 style="padding: 20px 0px 64px 16px; font-size: 40px;" class="mega-heading">Car Wash</h2>
         </div>
       </div>
       <div class="col-md-4 col-sm-3">
         <a href="mycustompackaging.html">
-          <img class="blogs-img wh-445" data-cursor-text="View Case" src="Assets/Images/Home/Mycustompackaging.jpg"
+          <img class="blogs-img wh-445" data-cursor-text="View Case" src="Assets/Images/Home/wmr.jpg"
             alt="JOM Mart" />
         </a>
         <div class="color-orange">
