--- a/index.html
+++ b/index.html
@@ -1006,7 +1006,7 @@
         </div>
       </div>
       <div class="col-md-4 coll-sm-3">
-        <a href="carr-mate.html">
+        <a href="Carwash App.html">
           <img class="blogs-img wh-445" data-cursor-text="View Case" src="Assets/Images/Home/Carwash.jpg"
             alt="carmate" />
         </a>
@@ -1016,7 +1016,7 @@
         </div>
       </div>
       <div class="col-md-4 col-sm-3">
-        <a href="mycustompackaging.html">
+        <a href="wmr.html">
           <img class="blogs-img wh-445" data-cursor-text="View Case" src="Assets/Images/Home/wmr.jpg"
             alt="JOM Mart" />
         </a>
@@ -1030,7 +1030,7 @@
   <div class="container mp-25 tm-only">
     <div class="row">
       <div class="col-md-4 col-sm-3">
-        <a href="playpal.html">
+        <a href="Shrtsurl.html">
           <img class="blogs-img wh-445" data-cursor-text="View Case" src="Assets/Images/Home/dashboard.jpg"
             alt="playpal" />
         </a>
@@ -1040,7 +1040,7 @@
         </div>
       </div>
       <div class="col-md-4 coll-sm-3">
-        <a href="vmd.html">
+        <a href="Pdf Scanner.html">
           <img class="blogs-img wh-445" data-cursor-text="View Case" src="Assets/Images/Home/Pdf reader.jpg" alt="vmd" />
         </a>
         <div class="color-orange">
