--- a/index.html
+++ b/index.html
@@ -508,9 +508,19 @@
 
 
       <div style="padding: 100px 0px 100px 0px;">
-        <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel" style="padding-left: 160px;">
+        <div
+          id="carouselExampleIndicators"
+          class="carousel slide"
+          data-ride="carousel"
+          style="padding-left: 160px;"
+          
+        >
           <ol class="carousel-indicators">
-            <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+            <li
+              data-target="#carouselExampleIndicators"
+              data-slide-to="0"
+              class="active"
+            ></li>
             <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
             <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
             <li data-target="#carouselExampleIndicators" data-slide-to="3"></li>
@@ -996,9 +1006,9 @@
                         <img class="blogs-img wh-445" data-cursor-text="View Case"
                             src="./Assets/Images/Home/pricing-dedicated-teams.png" alt="">
                     </div>
-                </div>
+                </div> -->
   </div>
-  </section> -->
+  </section> 
       <!-- slider for mobiles -->
       <div class="container mp-25 tm-only slider-section-tm">
         <div class="row">
@@ -1014,7 +1024,7 @@
           </div>
           <div class="col-md-4 coll-sm-3">
             <a href="Carwash App.html">
-              <img class="blogs-img wh-445" data-cursor-text="View Case" src="Assets/Images/Home/Carwash.jpg"
+              <img class="blogs-img wh-445" data-cursor-text="View Case" src="Assets/Images/Home/Carwash.webp"
                 alt="carmate" />
             </a>
             <div class="color-orange">
@@ -1024,7 +1034,7 @@
           </div>
           <div class="col-md-4 col-sm-3">
             <a href="wmr.html">
-              <img class="blogs-img wh-445" data-cursor-text="View Case" src="Assets/Images/Home/wmr.jpg"
+              <img class="blogs-img wh-445" data-cursor-text="View Case" src="Assets/Images/Home/wmr.webp"
                 alt="JOM Mart" />
             </a>
             <div class="color-orange">
@@ -1038,7 +1048,7 @@
         <div class="row">
           <div class="col-md-4 col-sm-3">
             <a href="Shrtsurl.html">
-              <img class="blogs-img wh-445" data-cursor-text="View Case" src="Assets/Images/Home/dashboard.jpg"
+              <img class="blogs-img wh-445" data-cursor-text="View Case" src="Assets/Images/Home/dashboard.webp"
                 alt="playpal" />
             </a>
             <div class="color-orange">
