--- a/all-project.html
+++ b/all-project.html
@@ -237,7 +237,7 @@
             </a> -->
           <a href="Shrtsurl.html" data-cursor-text="View Case" data-cursor="-color-green">
             <div class="project-img" style="
-                  background-image: url(Assets/Images/Home/dashboard.jpg);
+                  background-image: url(Assets/Images/Home/dashboard.webp);
                 ">
               <div class="card link-card">
                 <div class="card-body">
